fix images overlaps on media queries

--- a/apps/scss/layout/_body.scss
+++ b/apps/scss/layout/_body.scss
@@ -6,3 +6,14 @@ body {
   font-family: var(--ff--primary);
   color: var(--clr--white);
 }
+
+@media only screen and (min-width: 900px) {
+  body {
+    background: url("/images/bg-desktop.svg") no-repeat;
+    background-position: top;
+    background-size: contain;
+    background-color: var(--clr--violet);
+    font-family: var(--ff--primary);
+    color: var(--clr--white);
+  }
+}
