--- a/apps/scss/layout/_huddle.scss
+++ b/apps/scss/layout/_huddle.scss
@@ -47,26 +47,36 @@
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 900px) {
   .huddle {
-    width: 1440px;
+    max-width: 1440px;
+    padding: 2rem 0;
+
+    &__header_logo {
+      img {
+        height: 100px;
+        width: 200px;
+      }
+    }
+
     &__content {
       display: grid;
       gap: 1rem;
       grid-auto-flow: column;
+      grid-template-columns: repeat(3, 1fr);
       grid-auto-rows: auto 1fr;
 
       &_interface {
-        min-width: 400px;
-        display: grid;
-        place-items: center;
+        grid-column: 1/3;
+
+        img {
+          width: 100%;
+        }
       }
 
       &_info {
-        margin-top: 3rem;
-        max-width: 500px;
-        display: grid;
-        height: 200px;
         text-align: left;
-
+        margin-top: 4rem;
+        height: 240px;
+        grid-column: 3/4;
         .btn-register {
           margin: 0;
           margin-right: auto;
